--- a/html/signup.html
+++ b/html/signup.html
@@ -31,7 +31,7 @@
             <div class="featured-image m-4">
                 <img src="../images/financial-man.png" class="img-fluid" alt="Financial-man" style="width: 300px;">
         </div>
-            <small class="text-white text-wrap text-center" style="width: 17rem; font-family: 'Courier New', Courier, monospace;">Save your finance without knowing.</small>
+            <small class="text-white text-wrap text-center" style="width: 17rem; font-family: 'Courier New', Courier, monospace;">Keep track of your expenses with a set budget.</small>
         </div>
 
         <div class="col-md-6 right-box">
